# zephyr-multi-board

./: .env  .gitignore  CMakeLists.txt  Makefile  Makefile.zephyr_init  README.org  board_local.c  board_native.c  esp32c3_devkitm.conf  main.c  native_sim.conf  nucleo_f303re.conf  prj.conf  zephyr-fixing-lsp-issues.org  zephyr-multi-board-setup.org  zephyr-project.setup.org
boards/arm/local/: Kconfig.board  Kconfig.defconfig  board.cmake  local.dts
boards/arm/local/support/: openocd.cfg
